home/containers/kubernetes/tasket_kubernetes_containers/task_042_gcp_cert_manager_nginx_ingress_dns_validation/base/app/svc_whoami.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
