home/containers/kubernetes/tasket_kubernetes_containers/task_042_gcp_cert_manager_nginx_ingress_dns_validation/base/app/ingress_whoami.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    # kubernetes.io/ingress.class: "nginx" # Warning: annotation "kubernetes.io/ingress.class" is deprecated, please use 'spec.ingressClassName' instead
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - whoamiservice.DOMAIN_NAME # replace with your domain
    secretName: whoami-service-tls # This is the secret that will hold the SSL certificate
  rules:
  - host: whoamiservice.DOMAIN_NAME # replace with your domain
    http:
      paths:
      - pathType: Prefix
        path: "/whoami"
        backend:
          service:
            name: whoami-service
            port:
              number: 80
